  * new command ELSEIF <condition>  [WLM]
  * opsparser: implement elseif
  * opsparser: A more detailed description how the If / ELSE / ELSEIF / ENDIF parser works
  * interacticve GUI: Button "View Log" now shows the log in the opsi-logviewer [W/L]
  * killtask (fix): a process of another user can be killed if opsi-script is running as SYSTEM [W]

-- d.oertel <d.oertel@uib.de> Tue, 01 Feb 2022 15:00

opsi-script (4.12.4.36-2) stable; urgency=low

  * library uib_lin_install: remove "--no-install-recommends" from debinstall

-- d.oertel <d.oertel@uib.de> Tue, 08 Feb 2022 15:00

opsi-script (4.12.4.36-1) stable; urgency=low

  * oszip: show progressbar while zipping or unzipping files
  * oswebservice: getOpsiModules: integrate new backend_getLicensingInfo method with fallback to old backend_info
  * oswebservice: retrieveJSONObject: retry on other communication mode only on 400- bad request result
  * oswebservice: retrieveJSONObjectByHttpPost: retry on other communication mode only on 400- bad request result
  * oswebservice: getOpsiModules: Legal notice to our license protection
  * osfunclin: linIsUefi: implemented uefi test for linux
  * boolean function runningOnUefi now also supports linux
  * updated unit uSMBIOS (TSMBIOS) (https://code.google.com/p/tsmbios/)
  * uSMBIOS: with fix https://github.com/RRUZ/tsmbios/issues/15
  * osparser: fix %Systemroot% and %SystemDrive% for terminal servers ; references #4711
  * oswebservice: better opsi 4.0 compatibility by investigating the server response
  * osurlparser: createUrl: initialize uriobj.HasAuthority

-- d.oertel <d.oertel@uib.de> Wed, 19 Jan 2022 15:00


opsi-script (4.12.4.35) stable; urgency=low

  * osparser: getMSVersionMap: remove double ReleaseID=
  * osparser: executeWith: AllSigned Hack: use:
        "Get-Content -Path '+ tempfilename +' | Out-String | Invoke-Expression"
  * osparser: new function getMSVersionName: string
  * oslinmount: replace getGeneralConfigValue by configState_getObjects