@@ -21,6 +21,10 @@ opsi-script (4.12.4.37) stable; urgency=low
   * opsparser: A more detailed description how the If / ELSE / ELSEIF / ENDIF parser works
   * interacticve GUI: Button "View Log" now shows the log in the opsi-logviewer [W/L]
   * killtask (fix): a process of another user can be killed if opsi-script is running as SYSTEM [W]
+  * osnetworkcalculator: fixes at cidrToNetmask
+  * osnetworkcalculator: new function netmaskToCidr(netmask: string): string;
+  * new function cidrToNetmask(<string>): string;  [WLM]
+  * new function netmaskToCidr(<string>): string;  [WLM]
 
 -- d.oertel <d.oertel@uib.de> Tue, 01 Feb 2022 15:00
 
